--- a/client1/src/App.css
+++ b/client1/src/App.css
@@ -1,8 +1,16 @@
 .div{
-    height:fit-content ;
+    animation:clignote 40s infinite linear;
+    background-color:rgb(251, 255, 19);
+    font-size:1cm;
+    margin-top: 30px;
     text-align: center;
 }
+.margintop{
+    margin-top: 30px;
+}
 .block {
+    animation:backcolor 30s infinite;
+    background-color: rgb(18, 158, 13) ;
     display: inline-block;
     border: 3.5px solid rgb(0, 0, 0);
     width: 100px ;
@@ -10,6 +18,13 @@
     font-size: 75px;
     text-align: center;
     line-height: 100px;
+}
+@keyframes backcolor {
+    5%{background-color: rgb(72, 255, 0);}
+    15%{background-color: rgba(221, 26, 0);}
+    40%{background-color: rgb(0, 204, 255);}
+    70%{background-color: rgb(253, 0, 177);}
+    100%{background-color: salmon;}
 }
 .allgridcontainer{
     display: inline;
@@ -24,10 +39,11 @@
 }
 .title { 
     animation:title 5s infinite linear;
+    background-color: rgb(190, 243, 225);
     text-align: center;
     color: rgb(7, 7, 7);
     font-size: 1.5cm;
-    height: 40px;
+    height: 64px;
 }
 @keyframes title{
     5%{color: rgb(0, 0, 0);}
@@ -53,24 +69,52 @@
         text-shadow: none;}
     100%{color:red;}
 }
-
-.winPrint { 
-    animation:winprint 8s infinite linear;
+.caseTaken{
+    animation:caseTaken 5s infinite linear;
     display: block;
     text-align: center;
+    color: rgb(119, 0, 255);
+    font-size: 40px;
+}
+@keyframes caseTaken{
+    0%{
+        color: rgb(255, 0, 0);
+        text-shadow: blue;
+        transform: translateX(0px);
+    }
+    50% {
+        color: rgb(0, 255, 55);
+        text-shadow: none;
+    }
+    80%{color:rgb(0, 4, 255);
+        transform: translateX(-40px);
+    }
+}
+.winPrint { 
+    animation:winprint 3s infinite ;
     color: rgb(119, 0, 255);
     font-size: 40px;
     height:30px;
 }
 @keyframes winprint{
-    10%{
-        color: rgb(78, 122, 19);
-        text-shadow: none; }
-    25%{color: orange;}
-    50% {color: blue;
-        text-shadow: none;}
-    75%{color: yellow;}
-    9O%{color:red;}
+    0%{
+        color: rgb(122, 19, 19);
+        transform: translateX(0px);
+        transform: rotateY(-105deg);
+        text-shadow: thistle; }
+    25%{
+        color: rgb(10, 201, 175);
+        transform: translateX(-10px);
+    }
+    50% {
+        color: blue;
+        transform: rotateY(60deg);
+    }
+    75%{color: yellow;
+        transform: translateX(0px);
+        transform: rotateY(-360deg);
+    }
+
 }
 .containerLogout{
     text-align: center;
